refactor: core classes refactorign for consistency
- Standardized parameter naming from snake_case to camelCase in `IGame` and `Game`.
- Refactored utility classes (`Scoreboard`, `Messages`, `BoardColor`, `Tasks`, `PDFExporter`) to include private constructors.
- Enhanced the `Messages` utility with support for formatted strings and better error handling.
- Streamlined and simplified test suites for `BoardColor`, `Messages`, and `PDFExporter`.
- Optimized console rendering logic in `Game.java` by removing redundant `StringBuilder` usage.